Adds login and register index, css and js to women wishes

--- a/css/style-index-basketDetails.css
+++ b/css/style-index-basketDetails.css
@@ -194,7 +194,7 @@ aside {
     overflow: auto;
     height: 220px;
     width: 220px;
-    background-color: #D0CECE;
+    background-color: #BBB3B3;
     align-items: center;
     justify-content: center;
     margin-top: 40px;
