--- a/css/style-login.css
+++ b/css/style-login.css
@@ -3,6 +3,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #954B95;
 }
 
 .img-true {
@@ -42,6 +43,12 @@ body {
 }
 
 #login-h1 {
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 130px;
     margin-left: 10px;
     font-family: 'Bellefair', serif;
     color: #B375B3;
@@ -59,31 +66,35 @@ body {
 }
 
 .div-input {
+    /* background-color: lightgreen; */
     margin-left: 10px;
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     font-family:  'Bellefair', serif; 
-    font-size: 16px;
-    height: 75px;
+    font-size: 18px;
+    height: 140px;
     width: 220px;
 }
   
 .input-login {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: flex-end;
     justify-content: flex-start;
     border: none;
     padding: 4px 0;
     border-bottom: 1px solid #B375B3;
     background-color: transparent;
-    margin-left: 10px;
-    font-family: 'Bellefair', serif; 
-    font-size: 16px; 
-     width: 200px;
-    height: 35px; 
-     margin-bottom: 20px;
+    font-family: 'Bellefair', serif;
+    font-size: 16px;
+    width: 200px;
+    height: 50px;
+    margin-bottom: 0px;
+}
+
+#id-email {
+    margin-left: 0px;
 }
 
 .input-text {
@@ -126,7 +137,6 @@ body {
 }
 
 
-
 #button-login:hover {
     /* color: #60327F */
     border: 1.5px solid #B375B3;
@@ -137,31 +147,33 @@ body {
 #div-login {
     display: flex;
     width: 500px;
-    height: 200px;
-    flex-direction: column;
+    height: 80px;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     font-size: 18px;
 }
 
 #div-login-successful {
+    margin-left: 15px;
     display: none;
-    flex-direction: row;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: flex-start;
     align-items: center;
-    width: 300px;
-    height: 80px;
+    width: 500px;
+    height: 50px;
     color: rgb(33, 159, 33);
 
 }
 
 #div-login-failed {
+    margin-left: 15px;
     display: none;
-    flex-direction: row;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: flex-start;
     align-items: center;
-    width: 300px;
-    height: 80px;
+    width: 500px;
+    height: 50px;
     color: rgb(191, 11, 11);
 }
 
@@ -175,7 +187,21 @@ body {
     height: 40px;
 }
 
+#message-failed {
+    margin-left: 7px;
+    display: flex;
+}
+
+#message-successfull {
+    margin-left: 7px;
+    display: flex;
+}
+
+
 .div-registrate {
+    display: flex;
+    height: 35px;
+    align-items: center;
     margin-left: 10px;
     font-size: 14px;
 }
@@ -189,9 +215,3 @@ body {
     color: #954B95;
 
 }
-
-
-
-
-
-
