--- a/css/queries-login.css
+++ b/css/queries-login.css
@@ -311,4 +311,36 @@ and (orientation: landscape) {
 @media only screen 
 and (min-device-width: 320px) 
 and (max-device-width: 480px) {
+
+    html {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    body {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #954B95;
+    }
+
+    #id-form-login {
+        /* flex-grow: 1;
+        flex-shrink: 1; */
+        width: 270px;
+        height: 100%;;
+    }
+
+    
+
+  
 }
