--- a/css/style-login.css
+++ b/css/style-login.css
@@ -1,4 +1,13 @@
+@charset "utf-8";
+
+html {
+    width: 100% !important;
+    height: 100% !important;
+}
+
 body {
+    width: 100%;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
